--- a/index.html
+++ b/index.html
@@ -8,11 +8,25 @@
   <body>
     <form>
       <p>What is your gender</p>
-      <input type="radio" id="male" />
+      <input type="radio" id="male" name="gender" />
       <label for="male">male</label>
 
-      <input type="radio" id="female" />
+      <input type="radio" id="female" name="gender" />
       <label for="female">female</label>
+
+      <div>
+        <p>choose your hobbies</p>
+        <input type="checkbox" id="football" />
+        <label for="football">football</label>
+      </div>
+      <div>
+        <input type="checkbox" id="basketball" />
+        <label for="basketball">basketball</label>
+      </div>
+      <div>
+        <input type="chess" id="chess" />
+        <label for="chess">chess</label>
+      </div>
     </form>
   </body>
 </html>
