--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         <input type="chess" id="chess" />
         <label for="chess">chess</label>
       </div>
+      <div>
+        <input type="date" />
+      </div>
+      <div>
+        <input type="color" />
+      </div>
     </form>
   </body>
 </html>
